2009-03-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * release 1.0-beta7

2009-02-03 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/dictzip.rb: Added Dictzip#path.
    * lib/fantasdic/sources/dictd_file.rb: Handles the case when a match is
    found in the index but the definition can't be reached in the dictionary.

2009-01-18 Mathieu Blondel <mblondel@svn.gnome.org>

    * test/test_utils.rb: More complete test for hiragana? and katakana?.

2009-01-08 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/result_text_view.rb: Support for image tags.
    * lib/fantasdic/sources/epwing_dictionary.rb: Support for images and gaiji.

2009-01-07 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/result_text_view.rb:
    * data/fantasdic/ui/menus.xml: Added buttons to directly jump to a
    definition or a database.

2009-01-07 Mathieu Blondel <mblondel@svn.gnome.org>
    
    * lib/fantasdic/sources/epwing_dictionary.rb: Early support for EPWING
    dictionaries. This is a very popular format in Japan. The source requires
    rubyeb. The source will be visible to everyone but it will eventually 
    complain if someone tries to use it without having ruby installed.

    EPWING uses EUC-JP encoding and relies on so-called "gaiji" (foreign
    character) for characters not supported by EUC-JP. gaiji are displayed as 
    images so we need a way to allow a source to display images... 
    I guess Unicode didn't exist at that time...
    To be implemented...

2009-01-07 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Fixed bug when source doesn't exist anymore.

2009-01-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/text/porter_stemming.rb: Support for stemming (e.g.
    stemming => stem).
    * lib/fantasdic/text/metaphone.rb: Algorithm to compare the
    pronunciation of two strings.
    * lib/fantasdic/text/double_metaphone.rb: Same.